--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -29,6 +29,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n",
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#259c\n",
+    "\n",
+    "S, T = input(), input()\n",
+    "\n",
+    "if len(T) < len(S):\n",
+    "    print('No')\n",
+    "else:\n",
+    "    qS, qT = S[0], T[0]\n",
+    "    cnt = 1\n",
+    "    for i in range(1, len(S)):\n",
+    "        if S[i] != S[i-1]:\n",
+    "            qS += str(cnt) + S[i]\n",
+    "            cnt = 1\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "    qS += str(cnt)\n",
+    "\n",
+    "    cnt = 1\n",
+    "    for i in range(1, len(T)):\n",
+    "        if T[i] != T[i-1]:\n",
+    "            qT += str(cnt) + T[i]\n",
+    "            cnt = 1\n",
+    "        else:\n",
+    "            cnt += 1\n",
+    "    qT += str(cnt)\n",
+    "    \n",
+    "    # for i in range(0, len(qS), 2):\n",
+    "    #     if qS[i] != qT[i]:\n",
+    "    #         break\n",
+    "    #     else:\n",
+    "    #         if qS[i+1] != qT[i+1]:\n",
+    "    #             if int(qS[i+1]) < 2 or qS[i+1] > qT[i+1]:\n",
+    "    #                 break\n",
+    "    #     if i == len(qS)-2:\n",
+    "    #         print('Yes')\n",
+    "    #         # exit()\n",
+    "\n",
+    "    print(\"No\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.499999999999999 4.330127018922194\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#259b\n",
+    "\n",
+    "import math\n",
+    "\n",
+    "a, b, d = map(int, input().split())\n",
+    "\n",
+    "sin = math.sin(math.radians(d))\n",
+    "cos = math.cos(math.radians(d))\n",
+    "\n",
+    "print((cos*a)-(sin*b), sin*a + cos*b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#259a\n",
+    "\n",
+    "N, M, X, T, D = map(int, input().split())\n",
+    "\n",
+    "if M > X:\n",
+    "    print(T)\n",
+    "else:\n",
+    "    syoki = T - (X*D)\n",
+    "    print(syoki + M*D)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [
