add module runLength

--- a/python/module.ipynb
+++ b/python/module.ipynb
@@ -5,7 +5,34 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#ランレングス圧縮\n",
+    "\n",
+    "from itertools import groupby\n",
+    "\n",
+    "# str -> list\n",
+    "def runLengthEncode(args):\n",
+    "    grouped = groupby(args)\n",
+    "    res = []\n",
+    "    for k, v in grouped:\n",
+    "        res.append((k, int(len(list(v)))))\n",
+    "    return res\n",
+    "\n",
+    "# list -> str\n",
+    "def runLengthDecode(argl):\n",
+    "        res = \"\"\n",
+    "    for c, n in L:\n",
+    "        res += c * int(n)\n",
+    "    return res\n",
+    "\n",
+    "# str -> str\n",
+    "def runLengthEncodeToString(args):\n",
+    "    grouped = groupby(S)\n",
+    "    res = \"\"\n",
+    "    for k, v in grouped:\n",
+    "        res += k + str(len(list(v)))\n",
+    "    return res"
+   ]
   },
   {
    "cell_type": "code",
