--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yes\n",
+      "a1b2a2c1\n",
       "No\n"
      ]
     }
@@ -45,41 +45,26 @@
     "c=CNT()\n",
     "#259c\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
     "S, T = input(), input()\n",
+    "\n",
+    "def rle(s):\n",
+    "    tmp, count, ans = s[0], 1, \"\"\n",
+    "    for i in range(1,len(s)):\n",
+    "        if tmp == s[i]:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            ans += tmp+str(count)\n",
+    "            tmp = s[i]\n",
+    "            count = 1\n",
+    "    ans += tmp+str(count)\n",
+    "    return ans\n",
     "\n",
     "if len(T) < len(S):\n",
     "    print('No')\n",
     "else:\n",
-    "    qS, qT = S[0], T[0]\n",
-    "    cnt = 1\n",
-    "    for i in range(1, len(S)):\n",
-    "        if S[i] != S[i-1]:\n",
-    "            qS += str(cnt) + S[i]\n",
-    "            cnt = 1\n",
-    "        else:\n",
-    "            cnt += 1\n",
-    "    qS += str(cnt)\n",
-    "\n",
-    "    cnt = 1\n",
-    "    for i in range(1, len(T)):\n",
-    "        if T[i] != T[i-1]:\n",
-    "            qT += str(cnt) + T[i]\n",
-    "            cnt = 1\n",
-    "        else:\n",
-    "            cnt += 1\n",
-    "    qT += str(cnt)\n",
-    "    \n",
-    "    # for i in range(0, len(qS), 2):\n",
-    "    #     if qS[i] != qT[i]:\n",
-    "    #         break\n",
-    "    #     else:\n",
-    "    #         if qS[i+1] != qT[i+1]:\n",
-    "    #             if int(qS[i+1]) < 2 or qS[i+1] > qT[i+1]:\n",
-    "    #                 break\n",
-    "    #     if i == len(qS)-2:\n",
-    "    #         print('Yes')\n",
-    "    #         # exit()\n",
-    "\n",
+    "    print(rle(S))\n",
     "    print(\"No\")\n"
    ]
   },
