--- a/python/arc.ipynb
+++ b/python/arc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,126 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "-1\n",
+      "7 8 1 2 3 4 5 6\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m現在のセルまたは前のセルでコードを実行中に、カーネルがクラッシュしました。エラーの原因を特定するには、セル内のコードを確認してください。詳細については、<a href='https://aka.ms/vscodeJupyterKernelCrash'>こちら</a> をクリックしてください。さらなる詳細については、Jupyter [log] (command:jupyter.viewOutput) を参照してください。"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#144c\n",
+    "\n",
+    "N, K = map(int, input().split())\n",
+    "ans = list()\n",
+    "f = True\n",
+    "\n",
+    "for i in range(1,N+1):\n",
+    "    if K+i <= N:\n",
+    "        ans.append(K+i)\n",
+    "    else:\n",
+    "        if f:\n",
+    "            n = len(ans)\n",
+    "            f = False\n",
+    "        ans.append(i-n)\n",
+    "\n",
+    "for i, a in enumerate(ans):\n",
+    "    if abs(a-i) < K:\n",
+    "        print(-1)\n",
+    "        exit()\n",
+    "\n",
+    "print(*ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 11]\n",
+      "[2, 5, 5]\n",
+      "[2, 5, 5]\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#144b\n",
+    "\n",
+    "N, a, b = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "4444444444444444444444444\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#144a\n",
+    "\n",
+    "def sumline(argl):\n",
+    "    return sum(list(map(int, str(argl))))\n",
+    "\n",
+    "N = int(input())\n",
+    "n = 4\n",
+    "M = 2 * N\n",
+    "print(M)\n",
+    "\n",
+    "while True:\n",
+    "    if n == 0:\n",
+    "        break\n",
+    "    if N//n == 0:\n",
+    "        n -= 1\n",
+    "        continue\n",
+    "\n",
+    "    x = str(n)*(N//n)\n",
+    "\n",
+    "    if N%n != 0:\n",
+    "        x = str(N%n) + x\n",
+    "    print(x)\n",
+    "    n -= 1\n",
+    "    break\n"
    ]
   },
   {
