--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,35 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "B = list(map(int, input().split()))\n",
+    "C = list(map(int, input().split()))\n",
+    "\n",
+    "ans = 0\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if A[i] == B[C[j]-1]:\n",
+    "            ans += 1\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
