--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -41,17 +41,26 @@
     }
    ],
    "source": [
+    "c=CNT()\n",
+    "#abc202c\n",
+    "\n",
     "N = int(input())\n",
     "A = list(map(int, input().split()))\n",
     "B = list(map(int, input().split()))\n",
     "C = list(map(int, input().split()))\n",
     "\n",
+    "dic = dict()\n",
     "ans = 0\n",
     "\n",
-    "for i in range(N):\n",
-    "    for j in range(N):\n",
-    "        if A[i] == B[C[j]-1]:\n",
-    "            ans += 1\n",
+    "for c in C:\n",
+    "    if B[c-1] in dic.keys():\n",
+    "        dic[B[c-1]] += 1\n",
+    "    else:\n",
+    "        dic[B[c-1]] = 1\n",
+    "\n",
+    "for a in A:\n",
+    "    if a in dic.keys():\n",
+    "        ans += dic[a]\n",
     "\n",
     "print(ans)"
    ]
