--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,160 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#261d\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "X = list(map((int), input().split()))\n",
+    "Z = list()\n",
+    "for _ in range(M):\n",
+    "    Z.append(list(map(int, input().split())))\n",
+    "\n",
+    "result = list()\n",
+    "for i in range(2 ** N):\n",
+    "    tmp = list()\n",
+    "    for j in range(N):\n",
+    "        if ((i >> j) & 1):\n",
+    "            tmp.append(1)\n",
+    "        else:\n",
+    "            tmp.append(0)\n",
+    "    cnt = 0\n",
+    "    money = 0\n",
+    "    for i in range(N):\n",
+    "        if r[i] == 1:\n",
+    "            money += X[i]\n",
+    "            cnt += 1\n",
+    "        else:\n",
+    "            cnt = 0\n",
+    "        for z in Z:\n",
+    "            if z[0] == cnt:\n",
+    "                money += z[1]\n",
+    "    ans = max(ans, money)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "a(1)\n",
+      "a(2)\n",
+      "a(3)\n",
+      "a(4)\n",
+      "a(5)\n",
+      "a(6)\n",
+      "a(7)\n",
+      "a(8)\n",
+      "a(9)\n",
+      "a(10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#261c\n",
+    "\n",
+    "N = int(input())\n",
+    "S = dict()\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    ip = input()\n",
+    "    if ip in S:\n",
+    "        S[ip] += 1\n",
+    "        print(ip + '(' + str(S[ip]) + ')')\n",
+    "    else:\n",
+    "        S[ip] = 0\n",
+    "        print(ip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#261b\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list()\n",
+    "for _ in range(N):\n",
+    "    A.append(list(map(str, list(input()))))\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if (A[i][j] == 'W' and A[j][i] == 'W') or (A[i][j] == 'L' and A[j][i] == 'L') or (A[i][j] == 'D' and A[j][i] != 'D') or (A[i][j] != 'D' and A[j][i] == 'D'):\n",
+    "            print('incorrect')\n",
+    "            exit()\n",
+    "\n",
+    "print('correct')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#261a\n",
+    "\n",
+    "L1, R1, L2, R2 = map(int, input().split())\n",
+    "\n",
+    "ans = [0 for _ in range(110)]\n",
+    "cnt = 0\n",
+    "\n",
+    "for l in range(L1, R1):\n",
+    "    ans[l] += 1\n",
+    "\n",
+    "\n",
+    "for r in range(L2, R2):\n",
+    "    ans[r] += 1\n",
+    "\n",
+    "for a in ans:\n",
+    "    if a == 2:\n",
+    "        cnt += 1\n",
+    "\n",
+    "print(cnt)"
    ]
   },
   {
