--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -29,6 +29,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c=CNT()\n",
+    "#agc40a\n",
+    "\n",
+    "S = input()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
