--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,34 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LESS\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#abc059\n",
+    "\n",
+    "A = int(input())\n",
+    "B = int(input())\n",
+    "\n",
+    "if A > B:\n",
+    "    print('GREATER')\n",
+    "elif A < B:\n",
+    "    print('LESS')\n",
+    "else:\n",
+    "    print('EQUAL')"
    ]
   },
   {
@@ -263,11 +291,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.8.8 64-bit ('3.8.8')",
    "language": "python",
    "name": "python3"
   },
@@ -281,9 +306,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f63522d701228a199285ea92bbfb3bdfa669d3fbd7b19441913ac3668fbe2f06"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
