--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,36 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aattccooddeerrbreeggiunlnaerrccoonntteesstt\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#abc058b\n",
+    "\n",
+    "O = input()\n",
+    "E = input()\n",
+    "ans = ''\n",
+    "\n",
+    "for i in range(len(E)):\n",
+    "    ans += O[i] + E[i]\n",
+    "\n",
+    "if len(O) - len(E) != 0:\n",
+    "    ans += O[-1]\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
