--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -29,6 +29,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[], [3], [0, 1], [2, 4], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#abc065b\n",
+    "\n",
+    "N = int(input())\n",
+    "A = [list() for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    A[int(input())-1].append(i)\n",
+    "\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
