--- a/python/rcm.ipynb
+++ b/python/rcm.ipynb
@@ -50,7 +50,9 @@
     "for i in range(N):\n",
     "    A[int(input())-1].append(i)\n",
     "\n",
-    "print(A)"
+    "while True:\n",
+    "    if 1 in ans:\n",
+    "        print(cnt)"
    ]
   },
   {
@@ -348,7 +350,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('3.8.8')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -362,12 +364,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f63522d701228a199285ea92bbfb3bdfa669d3fbd7b19441913ac3668fbe2f06"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
