--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,149 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#262d\n",
+    "\n",
+    "import itertools\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "ans = 0\n",
+    "for i in range(1, N+1):\n",
+    "    comb = itertools.combinations(A, i)\n",
+    "    ans %= 998244353\n",
+    "    for c in comb:\n",
+    "        if sum(c)/i == int(sum(c)/i):\n",
+    "            ans += 1\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#262c\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "ans1, ans2 = 0, 0\n",
+    "cnt = 0\n",
+    "for i in range(N):\n",
+    "    if i == A[i]-1:\n",
+    "        cnt += 1\n",
+    "ans1 = cnt * (cnt-1) // 2\n",
+    "\n",
+    "for i in range(N):\n",
+    "    if A[i]-1 != i and A[A[i]-1]-1 == i:\n",
+    "        ans2 += 1\n",
+    "\n",
+    "print(ans1 + ans2//2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#262b\n",
+    "\n",
+    "import itertools as it\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "R = [list() for _ in range(N)]\n",
+    "for i in range(M):\n",
+    "    U, V = map(int, input().split())\n",
+    "    R[U-1].append(V-1)\n",
+    "    R[V-1].append(U-1)\n",
+    "\n",
+    "for r in R:\n",
+    "    r.sort()\n",
+    "\n",
+    "ans = 0\n",
+    "for i in range(N):\n",
+    "    if len(R[i]) > 1:\n",
+    "        comb = it.combinations(R[i], 2)\n",
+    "        for c in comb:\n",
+    "            if (i in R[c[0]] and c[1] in R[c[0]]) and (i in R[c[1]] and c[0] in R[c[1]]):\n",
+    "                ans += 1\n",
+    "    for j in range(N):\n",
+    "        if len(R[j]) > 0 and R[j][0] == i:\n",
+    "            R[j].pop(0)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3002\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#262a\n",
+    "\n",
+    "Y = int(input())\n",
+    "\n",
+    "n = Y%4\n",
+    "\n",
+    "if n == 2:\n",
+    "    ans = Y\n",
+    "elif n == 3:\n",
+    "    ans = Y + 3\n",
+    "elif n == 0:\n",
+    "    ans = Y + 2\n",
+    "elif n == 1:\n",
+    "    ans = Y + 1\n",
+    "    \n",
+    "print(ans)"
    ]
   },
   {
