--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -29,6 +29,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m現在のセルまたは前のセルでコードを実行中に、カーネルがクラッシュしました。エラーの原因を特定するには、セル内のコードを確認してください。詳細については、<a href='https://aka.ms/vscodeJupyterKernelCrash'>こちら</a> をクリックしてください。さらなる詳細については、Jupyter [log] (command:jupyter.viewOutput) を参照してください。"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#263b\n",
+    "\n",
+    "N = int(input())\n",
+    "P = list(map(int, input().split()))\n",
+    "\n",
+    "cnt = 0\n",
+    "\n",
+    "for i, p in enumerate(P):\n",
+    "    if i+1 != p:\n",
+    "        print(i)\n",
+    "        exit()\n",
+    "\n",
+    "print(N-1)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#263a\n",
+    "\n",
+    "dic = dict()\n",
+    "for d in list(map(int, input().split())):\n",
+    "    if d in dic.keys():\n",
+    "        dic[d] += 1\n",
+    "    else:\n",
+    "        dic[d] = 1\n",
+    "\n",
+    "if len(list(dic.keys())) == 2:\n",
+    "    for v in dic.values():\n",
+    "        if v == 4:\n",
+    "            print('No')\n",
+    "            exit()\n",
+    "    print('Yes')\n",
+    "else:\n",
+    "    print('No')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
