--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,131 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#265c\n",
+    "\n",
+    "H, W = map(int, input().split())\n",
+    "G = [list(input()) for l in range(H)]\n",
+    "\n",
+    "posx, posy = 0, 0\n",
+    "flag = [[0 for _ in range(W)] for _ in range(H)]\n",
+    "\n",
+    "while True:\n",
+    "    flag[posx][posy] = 1\n",
+    "    # print(root, flag)\n",
+    "\n",
+    "    if G[posx][posy] == 'R':\n",
+    "        posy += 1\n",
+    "    elif G[posx][posy] == 'D':\n",
+    "        posx += 1\n",
+    "    elif G[posx][posy] == 'U':\n",
+    "        posx -= 1     \n",
+    "    else:\n",
+    "        posy -= 1\n",
+    "\n",
+    "    if posx == -1:\n",
+    "        posx += 1\n",
+    "        print(posx+1, posy+1)\n",
+    "        break\n",
+    "    if posx == H:\n",
+    "        posx -= 1\n",
+    "        print(posx+1, posy+1)\n",
+    "        break\n",
+    "    if posy == -1:\n",
+    "        posy += 1\n",
+    "        print(posx+1, posy+1)\n",
+    "        break\n",
+    "    if posy == W:\n",
+    "        posy -= 1\n",
+    "        print(posx+1, posy+1)\n",
+    "        break\n",
+    "    \n",
+    "    if flag[posx][posy] == 1:\n",
+    "        print(-1)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#265b\n",
+    "\n",
+    "N, M, T = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "XY = [list(map(int, input().split())) for XY in range(M)]\n",
+    "\n",
+    "i = 0\n",
+    "idx = 0\n",
+    "while True:\n",
+    "    if len(A) == i:\n",
+    "        print('Yes')\n",
+    "        exit()\n",
+    "    T -= A[i]\n",
+    "    if T <= 0:\n",
+    "        print('No')\n",
+    "        exit()\n",
+    "    if len(XY) > idx and XY[idx][0] == i+2:\n",
+    "        T += XY[idx][1]\n",
+    "        idx += 1\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "85\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#265a\n",
+    "\n",
+    "X, Y, N = map(int, input().split())\n",
+    "\n",
+    "if N > 2:\n",
+    "    if X*3 > Y:\n",
+    "        ans = (N//3)*Y + (N%3)*X\n",
+    "    else:\n",
+    "        ans = X*N\n",
+    "else:\n",
+    "    ans = X*N\n",
+    "print(ans)\n",
+    "\n"
    ]
   },
   {
