--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -29,6 +29,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#268d\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "S = [input() for _ in range(N)]\n",
+    "T = [input() for _ in range(M)]\n",
+    "\n",
+    "sum = 0\n",
+    "for s in S:\n",
+    "    sum += len(s)\n",
+    "ubnum = 16 - sum\n",
+    "\n",
+    "if N == 1:\n",
+    "    pass\n",
+    "else:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#268c\n",
+    "\n",
+    "N = int(input())\n",
+    "P = list(map(int, input().split()))\n",
+    "\n",
+    "cnt = [0 for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    cnt[(P[i]-i)%N] += 1\n",
+    "for i in range(N):\n",
+    "    cnt[(P[i]-i-1)%N] += 1\n",
+    "for i in range(N):\n",
+    "    cnt[(P[i]-i+1)%N] += 1\n",
+    "\n",
+    "print(max(cnt))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#268b\n",
+    "S = input()\n",
+    "T = input()\n",
+    "\n",
+    "if S == T[:len(S)]:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#268a\n",
+    "\n",
+    "l = set()\n",
+    "for i in input().split():\n",
+    "    l.add(i)\n",
+    "\n",
+    "print(len(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 82,
    "metadata": {},
    "outputs": [
