--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,103 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#276c\n",
+    "import bisect\n",
+    "\n",
+    "N = int(input())\n",
+    "P = list(map(int, input().split()))\n",
+    "\n",
+    "Q = sorted(P)\n",
+    "for i in range(N-2, -1, -1):\n",
+    "    if P[i] > P[i+1]:\n",
+    "        M = int(Q[bisect.bisect_left(Q, P[i])-1])\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "R = P[i:]\n",
+    "R.remove(M)\n",
+    "R = sorted(R, reverse=True)\n",
+    "print(*P[:i], M, *R)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 2 3 6\n",
+      "2 1 5\n",
+      "2 1 6\n",
+      "0 \n",
+      "2 2 6\n",
+      "3 1 3 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#276b\n",
+    "\n",
+    "import bisect\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "L = [list() for _ in range(N)]\n",
+    "\n",
+    "for i in range(M):\n",
+    "    A, B = map(int, input().split())\n",
+    "    bisect.insort(L[A-1], B)\n",
+    "    bisect.insort(L[B-1], A)\n",
+    "\n",
+    "for l in L:\n",
+    "    print(len(l), end=' ')\n",
+    "    print(*l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#276a\n",
+    "\n",
+    "S = input()\n",
+    "ans = -1\n",
+    "for i in range(len(S)):\n",
+    "    if S[i] == 'a':\n",
+    "        ans = i+1\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
@@ -2961,11 +3058,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.9 64-bit",
+   "display_name": "Python 3.8.8 64-bit ('3.8.8')",
    "language": "python",
    "name": "python3"
   },
@@ -2979,9 +3073,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "f63522d701228a199285ea92bbfb3bdfa669d3fbd7b19441913ac3668fbe2f06"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
