--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -29,6 +29,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#277c\n",
+    "\n",
+    "def update(k, v):\n",
+    "    if not k in dic:\n",
+    "        dic[k] = list()\n",
+    "    dic[k].append(v)\n",
+    "\n",
+    "N = int(input())\n",
+    "dic = dict()\n",
+    "for _ in range(N):\n",
+    "    A, B = map(int, input().split())\n",
+    "    update(A, B)\n",
+    "    update(B, A)\n",
+    "\n",
+    "ans = 0\n",
+    "flag = dict(zip(dic.keys(), [False for _ in range(len(dic.keys()))]))\n",
+    "\n",
+    "def recursive(n):\n",
+    "    global ans\n",
+    "\n",
+    "    flag[n] = True\n",
+    "    ans = max(max(dic[n]), ans)\n",
+    "    for x in dic[n]:\n",
+    "        if flag[x]:\n",
+    "            continue\n",
+    "        recursive(x)\n",
+    "\n",
+    "if not 1 in dic:\n",
+    "    print(1)\n",
+    "    exit()\n",
+    "\n",
+    "for x in dic[1]:\n",
+    "    recursive(x)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#277b\n",
+    "\n",
+    "N = int(input())\n",
+    "dic = dict()\n",
+    "mark = ['H', 'D', 'C', 'S']\n",
+    "number = ['A', '2', '3', '4', '5', '6', '7', '8', '9', 'T', 'J', 'Q', 'K']\n",
+    "for _ in range(N):\n",
+    "    s = input()\n",
+    "    if s[0] in mark and s[1] in number:\n",
+    "        if not s in dic:\n",
+    "            dic[s] = True\n",
+    "        else:\n",
+    "            print('No')\n",
+    "            exit()\n",
+    "    else:\n",
+    "        print('No')\n",
+    "        exit()\n",
+    "print('Yes')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#277a\n",
+    "\n",
+    "N, X = map(int, input().split())\n",
+    "P = list(map(int, input().split()))\n",
+    "\n",
+    "for i, p in enumerate(P):\n",
+    "    if p == X:\n",
+    "        print(i+1)\n",
+    "        exit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -3057,7 +3175,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('3.8.8')",
+   "display_name": "Python 3.8.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -3071,12 +3189,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f63522d701228a199285ea92bbfb3bdfa669d3fbd7b19441913ac3668fbe2f06"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
