--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,168 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "5\n",
+      "7\n",
+      "21\n",
+      "21\n",
+      "19\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#278d\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "Q = int(input())\n",
+    "\n",
+    "dic = dict()\n",
+    "for i in range(N):\n",
+    "    dic[i+1] = A[i]\n",
+    "flag = False\n",
+    "tmp = 0\n",
+    "\n",
+    "for i in range(Q):\n",
+    "    query = list(map(int, input().split()))\n",
+    "    # print(dic)\n",
+    "    if query[0] == 1:\n",
+    "        tmp = query[1]\n",
+    "        dic = dict()\n",
+    "    elif query[0] == 2:\n",
+    "        if query[1] in dic:\n",
+    "            dic[query[1]] += query[2]\n",
+    "        else:\n",
+    "            dic[query[1]] = query[2] + tmp\n",
+    "    elif query[0] == 3:\n",
+    "        if query[1] in dic:\n",
+    "            print(dic[query[1]])\n",
+    "        else:\n",
+    "            print(tmp)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "Yes\n",
+      "Yes\n",
+      "No\n",
+      "No\n",
+      "No\n",
+      "Yes\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#278c\n",
+    "N, Q = map(int, input().split())\n",
+    "\n",
+    "flw = dict()\n",
+    "for i in range(Q):\n",
+    "    T, A, B = map(int, input().split())\n",
+    "    if T == 1:\n",
+    "        if not A in flw:\n",
+    "            flw[A] = dict()\n",
+    "        flw[A][B] = True\n",
+    "    elif T == 2:\n",
+    "        if A in flw and B in flw[A]:\n",
+    "            flw[A][B] = False\n",
+    "    else:\n",
+    "        if A in flw and B in flw:\n",
+    "            if A in flw[B] and B in flw[A]:\n",
+    "                if flw[A][B] and flw[B][A]:\n",
+    "                    print(\"Yes\")\n",
+    "                    continue\n",
+    "        print(\"No\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01 23\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#278b\n",
+    "\n",
+    "H, M = map(str, input().split())\n",
+    "H = H.zfill(2)\n",
+    "M = M.zfill(2)\n",
+    "\n",
+    "while True:\n",
+    "    A, B = H[0], H[1]\n",
+    "    C, D = M[0], M[1]\n",
+    "\n",
+    "    if int(A+C) < 24 and int(B+D) < 60:\n",
+    "        break\n",
+    "\n",
+    "    if int(C+D)+1 > 59:\n",
+    "        H = str((int(A+B)+1)%24).zfill(2)\n",
+    "    else:\n",
+    "        H = str((int(A+B))%24).zfill(2)\n",
+    "    M = str((int(C+D)+1)%60).zfill(2)\n",
+    "\n",
+    "print(H, M)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 7 8 9 0 0 0 0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#278a\n",
+    "\n",
+    "N, K = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "for _ in range(K):\n",
+    "    A = A[1:]\n",
+    "    A.append(0)\n",
+    "\n",
+    "print(*A)"
    ]
   },
   {
