--- a/python/arc.ipynb
+++ b/python/arc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,102 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import bisect\n",
+    "\n",
+    "L = [2, 3, 7, 10]\n",
+    "\n",
+    "print(bisect.bisect_left(L, 11))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#152b\n",
+    "\n",
+    "\n",
+    "import bisect\n",
+    "\n",
+    "N, L = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "ans = 4*L\n",
+    "for i in range(N):\n",
+    "    pos = bisect.bisect_left(A, L-A[i])\n",
+    "    if pos == 0:\n",
+    "        pass\n",
+    "    elif pos == N:\n",
+    "        pos = pos-1\n",
+    "    elif abs(L-A[i]-A[pos]) > abs(L-A[i]-A[pos-1]):\n",
+    "        pos = pos-1\n",
+    "    dt = abs((A[i]*2 + abs(A[i]-A[pos])) - (L-A[i] + L-A[pos]))\n",
+    "    ans = min(ans, 2*L + dt)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#152a\n",
+    "\n",
+    "N, L = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "n = 0\n",
+    "i = 0\n",
+    "while True:\n",
+    "    if i == N:\n",
+    "        print(\"Yes\")\n",
+    "        exit()\n",
+    "    if L < n+A[i]:\n",
+    "        break\n",
+    "    n += A[i]+1\n",
+    "    i += 1\n",
+    "\n",
+    "if 2 in A[i:]:\n",
+    "    print(\"No\")\n",
+    "else:\n",
+    "    print(\"Yes\")"
    ]
   },
   {
