--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,98 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#.#.#.#.', '.#.#.#.#', '.#.#.#.#', '#.#.#.#.', '.#.#.#.#', '.#.#.#.#', '#.#.#.#.'] ['.#.#.#.#', '.#.#.#.#', '.#.#.#.#', '.#.#.#.#', '#.#.#.#.', '#.#.#.#.', '#.#.#.#.']\n",
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#279 c\n",
+    "\n",
+    "H, W = map(int, input().split())\n",
+    "S = [\"\" for _ in range(W)]\n",
+    "T = [\"\" for _ in range(W)]\n",
+    "for i in range(H):\n",
+    "    tmp = input()\n",
+    "    for j, t in enumerate(tmp):\n",
+    "        S[j] += tmp[j]\n",
+    "for i in range(H):\n",
+    "    tmp = input()\n",
+    "    for j, t in enumerate(tmp):\n",
+    "        T[j] += tmp[j]\n",
+    "\n",
+    "S.sort()\n",
+    "T.sort()\n",
+    "if S == T:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#279 b\n",
+    "\n",
+    "S, T = input(), input()\n",
+    "\n",
+    "if T in S:\n",
+    "    print(\"Yes\")\n",
+    "else:\n",
+    "    print(\"No\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#279 a\n",
+    "\n",
+    "S = input()\n",
+    "\n",
+    "ans = 0\n",
+    "for s in S:\n",
+    "    if s == \"v\":\n",
+    "        ans += 1\n",
+    "    else:\n",
+    "        ans += 2\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
