--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,6 +25,202 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1307674368000 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 10**12\n",
+    "\n",
+    "ans = 1\n",
+    "for i in range(1, 50):\n",
+    "    ans *= i\n",
+    "    if ans > n:\n",
+    "        print(ans, i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#280 d\n",
+    "\n",
+    "K = int(input())\n",
+    "\n",
+    "# 素因数分解\n",
+    "def prime_factorize(N):\n",
+    "    res = []\n",
+    "    for p in range(2, N):\n",
+    "        if p * p > N:\n",
+    "            break\n",
+    "        if N % p != 0:\n",
+    "            continue\n",
+    "        e = 0\n",
+    "        while N % p == 0:\n",
+    "            e += 1\n",
+    "            N //= p\n",
+    "        res.append((p, e))\n",
+    "\n",
+    "    if N != 1:\n",
+    "        res.append((N, 1))\n",
+    "    return res\n",
+    "\n",
+    "\n",
+    "\n",
+    "pf = prime_factorize(K)\n",
+    "\n",
+    "pr = []\n",
+    "for p, cnt in pf:\n",
+    "    multi = p\n",
+    "    addi = p\n",
+    "    tm = 1\n",
+    "    ans = 0\n",
+    "    while True:\n",
+    "        if addi % multi == 0:\n",
+    "            ans += tm\n",
+    "        else:\n",
+    "            ans += 1\n",
+    "\n",
+    "        if addi == multi:\n",
+    "            multi *= p\n",
+    "            tm += 1      \n",
+    "\n",
+    "        if ans >= cnt:\n",
+    "            break\n",
+    "\n",
+    "        addi += p\n",
+    "    \n",
+    "    #print(multi, addi, tm, ans)\n",
+    "    \n",
+    "    pr.append(addi)\n",
+    "\n",
+    "\n",
+    "print(max(pr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#280 c\n",
+    "\n",
+    "S = input()\n",
+    "T = input()\n",
+    "\n",
+    "for i in range(len(S)):\n",
+    "    if i == len(S)-1:\n",
+    "        print(i+2)\n",
+    "        break\n",
+    "    if S[i] != T[i]:\n",
+    "        print(i+1)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "314159265 44820058 487285015 -1174214626 747667227 -1357227521 1035005041 133287181 397839259 -1491424381\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "#280 b\n",
+    "\n",
+    "N = int(input())\n",
+    "S = list(map(int, input().split()))\n",
+    "\n",
+    "ans = list()\n",
+    "for s in S:\n",
+    "    ans.append(s-sum(ans))\n",
+    "\n",
+    "print(*ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "C=CNT()\n",
+    "#280 a\n",
+    "\n",
+    "H, W = map(int, input().split())\n",
+    "ans = 0\n",
+    "\n",
+    "for _ in range(H):\n",
+    "    ans += input().count('#')\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
@@ -3443,7 +3639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.8.9 (default, Aug  3 2021, 19:21:54) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
