--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,46 +29,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1307674368000 15\n"
+      "a.\"t,\"c.\"o,\"d.\"e,\"r.\n"
      ]
     }
    ],
    "source": [
-    "n = 10**12\n",
+    "c=CNT()\n",
     "\n",
-    "ans = 1\n",
-    "for i in range(1, 50):\n",
-    "    ans *= i\n",
-    "    if ans > n:\n",
-    "        print(ans, i)\n",
-    "        break"
+    "# 282 c\n",
+    "\n",
+    "N = int(input())\n",
+    "S = list(input())\n",
+    "\n",
+    "cnt = 0\n",
+    "for i, s in enumerate(S):\n",
+    "    if s == '\"':\n",
+    "        cnt += 1\n",
+    "    if cnt%2 == 0:\n",
+    "        if s == ',':\n",
+    "            S[i] = '.'\n",
+    "\n",
+    "print(''.join(S))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "# 282 b\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "S = [input() for _ in range(N)]\n",
+    "\n",
+    "ans = 0\n",
+    "for i in range(N):\n",
+    "    for j in range(i+1, N):\n",
+    "        for k in range(M):\n",
+    "            if S[i][k] == \"x\" and S[j][k] == 'x':\n",
+    "                break\n",
+    "            if k == M-1:\n",
+    "                ans += 1\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "# 282 a\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "ans = ''\n",
+    "for i in range(N):\n",
+    "    ans += chr(i+65)\n",
+    "\n",
+    "print(ans)"
    ]
   },
   {
@@ -3639,7 +3684,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9 (default, Aug  3 2021, 19:21:54) \n[Clang 13.0.0 (clang-1300.0.29.3)]"
+   "version": "3.8.9"
   },
   "orig_nbformat": 4,
   "vscode": {
