--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -29,6 +29,125 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2: [2, 4, 6], 5: [5, 10, 15]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "\n",
+    "# 286 d\n",
+    "\n",
+    "N, X = map(int, input().split())\n",
+    "COIN = dict()\n",
+    "for _ in range(N):\n",
+    "    a, b = map(int, input().split())\n",
+    "    COIN[a] = b\n",
+    "\n",
+    "for key in COIN.keys():\n",
+    "    ptn = list()\n",
+    "    for n in range(1, COIN[key]+1):\n",
+    "        if key*n <= X:\n",
+    "            ptn.append(key * n)\n",
+    "    COIN[key] = ptn\n",
+    "\n",
+    "sm = 0\n",
+    "for i, key in enumerate(COIN.keys()):\n",
+    "    \n",
+    "\n",
+    "print(COIN)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4000000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "\n",
+    "# 286 c\n",
+    "\n",
+    "N, A, B = map(int, input().split())\n",
+    "S = input()\n",
+    "\n",
+    "ans = B*(len(S)//2)\n",
+    "for i in range(N):\n",
+    "    sm = i * A\n",
+    "    for j in range(N//2):\n",
+    "        if S[(i+j)%len(S)] != S[(i-j-1)%len(S)]:\n",
+    "            sm += B\n",
+    "    ans = min(ans, sm)\n",
+    "\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nyaan\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "\n",
+    "# 286 b\n",
+    "\n",
+    "N = int(input())\n",
+    "S = input()\n",
+    "\n",
+    "print(S.replace('na', 'nya'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22 47 29 97 72 81 75 26 45 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "\n",
+    "# 286 a\n",
+    "\n",
+    "N, P, Q, R, S = map(int, input().split())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "print(*A[:P-1], *A[R-1:S], *A[Q:R-1], *A[P-1:Q], *A[S:])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
    "outputs": [
