--- a/python/abc.ipynb
+++ b/python/abc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "        self.x = 0\n",
     "    def __call__(self):\n",
     "        self.x += 1\n",
-    "        return self.x        \n",
+    "        return self.x\n",
     "\n",
     "c = CNT()\n",
     "\n",
@@ -25,6 +25,74 @@
     "    else:\n",
     "        ret = data[cnt-1]\n",
     "        return ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "\n",
+    "# 338b\n",
+    "\n",
+    "S = input()\n",
+    "\n",
+    "cnt = dict()\n",
+    "for s in S:\n",
+    "    if s in cnt:\n",
+    "        cnt[s] += 1\n",
+    "    else:\n",
+    "        cnt[s] = 1\n",
+    "\n",
+    "max_value = max(cnt.values())\n",
+    "max_keys = [k for k, v in cnt.items() if v == max_value]\n",
+    "\n",
+    "print(min(max_keys))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes\n"
+     ]
+    }
+   ],
+   "source": [
+    "c=CNT()\n",
+    "\n",
+    "# 338a\n",
+    "\n",
+    "S = input()\n",
+    "\n",
+    "for i, s in enumerate(S):\n",
+    "    if i == 0:\n",
+    "        if s.islower():\n",
+    "            print('No')\n",
+    "            exit()\n",
+    "    else:\n",
+    "        if s.isupper():\n",
+    "            print('No')\n",
+    "            exit()\n",
+    "\n",
+    "print('Yes')\n"
    ]
   },
   {
@@ -60,7 +128,7 @@
     "\n",
     "sm = 0\n",
     "for i, key in enumerate(COIN.keys()):\n",
-    "    \n",
+    "\n",
     "\n",
     "print(COIN)\n",
     "\n"
@@ -290,15 +358,15 @@
     "\n",
     "        if addi == multi:\n",
     "            multi *= p\n",
-    "            tm += 1      \n",
+    "            tm += 1\n",
     "\n",
     "        if ans >= cnt:\n",
     "            break\n",
     "\n",
     "        addi += p\n",
-    "    \n",
+    "\n",
     "    #print(multi, addi, tm, ans)\n",
-    "    \n",
+    "\n",
     "    pr.append(addi)\n",
     "\n",
     "\n",
@@ -882,8 +950,7 @@
     "\n",
     "if N == 1:\n",
     "    pass\n",
-    "else:\n",
-    "    "
+    "else:\n"
    ]
   },
   {
@@ -993,7 +1060,7 @@
     "for x in X:\n",
     "    T, X, A = x\n",
     "    dp[T][X+1] = A\n",
-    "    \n",
+    "\n",
     "for t in range(T):\n",
     "    nextdp = [-1 for _ in range(7)]\n",
     "    for x in range(1, 6):\n",
@@ -1119,7 +1186,7 @@
     "    elif G[posx][posy] == 'D':\n",
     "        posx += 1\n",
     "    elif G[posx][posy] == 'U':\n",
-    "        posx -= 1     \n",
+    "        posx -= 1\n",
     "    else:\n",
     "        posy -= 1\n",
     "\n",
@@ -1139,7 +1206,7 @@
     "        posy -= 1\n",
     "        print(posx+1, posy+1)\n",
     "        break\n",
-    "    \n",
+    "\n",
     "    if flag[posx][posy] == 1:\n",
     "        print(-1)\n",
     "        break"
@@ -1425,7 +1492,7 @@
     "    ans = Y + 2\n",
     "elif n == 1:\n",
     "    ans = Y + 1\n",
-    "    \n",
+    "\n",
     "print(ans)"
    ]
   },
@@ -2345,7 +2412,7 @@
     "\n",
     "for i in range(1, N+1):\n",
     "    REL[i] = [j for j in range(1, N+1)]\n",
-    "    REL[i][i-1] = 0 \n",
+    "    REL[i][i-1] = 0\n",
     "print(REL)\n",
     "\n",
     "for i in range(M):\n",
@@ -2550,7 +2617,7 @@
     "B = [0 for _ in range(M+1)]\n",
     "slv = ''\n",
     "\n",
-    "for "
+    "for"
    ]
   },
   {
@@ -2869,10 +2936,10 @@
     "    d['L'].sort()\n",
     "\n",
     "    if len(d['R']) > 0 and len(d['L']) > 0 and \\\n",
-    "        min(d['R']) < max(d['L']): \n",
+    "        min(d['R']) < max(d['L']):\n",
     "        ans = True\n",
     "        break\n",
-    "    \n",
+    "\n",
     "\n",
     "if ans:\n",
     "    print(\"Yes\")\n",
@@ -2954,13 +3021,13 @@
     "        break\n",
     "    else:\n",
     "        r -= A\n",
-    "    \n",
+    "\n",
     "    if r-B < 0:\n",
     "        print('M')\n",
     "        break\n",
     "    else:\n",
     "        r -= B\n",
-    "    \n",
+    "\n",
     "    if r-C < 0:\n",
     "        print('T')\n",
     "        break\n",
@@ -3447,9 +3514,9 @@
     "for i in range(H):\n",
     "    for j in range(W):\n",
     "        if grid[i][j] > 0:\n",
-    "            if i+1 < H and grid[i+1][j] != -1: \n",
+    "            if i+1 < H and grid[i+1][j] != -1:\n",
     "                grid[i+1][j] = grid[i][j]+1\n",
-    "            if j+1 < W and grid[i][j+1] != -1: \n",
+    "            if j+1 < W and grid[i][j+1] != -1:\n",
     "                grid[i][j+1] = grid[i][j]+1\n",
     "            if cnt < grid[i][j]: cnt = grid[i][j]\n",
     "\n",
@@ -3656,7 +3723,7 @@
     "    else:\n",
     "        upper -= 1\n",
     "\n",
-    "if flag: print('Hard') \n",
+    "if flag: print('Hard')\n",
     "else: print('Easy')\n",
     "\n"
    ]
@@ -3700,7 +3767,7 @@
     "        index = uf[x[i] % N]\n",
     "        while A[index] != -1:\n",
     "            index = uf[index]\n",
-    "        \n",
+    "\n",
     "        A[index] = x[i]\n",
     "\n",
     "        index_next = (index + 1) % N\n",
@@ -3803,7 +3870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.9"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
